[project]
name = "RawHandler" 
version = "0.2.1"
description = "A basic library to handle camera raw files for use in machine learning. Built on rawpy and cv2."
authors = [
    { name = "Ryan Mueller"},
]
readme = "README.md"
requires-python = ">=3.10,<3.15" 
license = { file = "LICENSE" }
keywords = ["python", "Machine Learning", "Camera Raw"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "rawpy>=0.24.0",
    "colour_demosaicing>=0.2.6",
    "exifread>=3.3.1",
    "exiv2",
    "tifffile>=2024.0.0",
    "colour-science>=0.4.6",
    ]

[project.optional-dependencies]
torch = [
    "torch>=2.7.0"
]
example = [
    "requests>=2.32.3"
]

[project.urls]
"Homepage" = "https://github.com/rymuelle/RawHandler"
"Bug Tracker" = "https://github.com/rymuelle/RawHandler/issues"

[build-system]
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta" 

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "requests>=2.33.1",
]
